improved SEO, fixed warning label position on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -70,7 +70,7 @@ h1, h2, h3, h5, h6, p, ul, li, a, span, input, textarea, label, summary, details
   font-family: 'Quicksand', monospace;
 }
 
-h1, h4 {
+h1, h3, h4 {
   font-family: 'Signika Negative', sans-serif;
 }
 
@@ -94,7 +94,8 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
+  color: var(--secondary);
+  font-size: clamp(3rem, 5vw, 4rem);
 }
 
 h4 {
